<resources>
    <string name="app_name" translatable="false">Global study broad fair</string>
    <!--    <string name="my_app_name" translatable="false">Global study broad fair</string>-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">name@vrd.coms</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="google_client_id" translatable="false">542250737034-bemru66kcb3kgt6i3jc8ppbgqlkamrel.apps.googleusercontent.com</string>
<!--    <string name="google_client_secret" translatable="false">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</string>-->


    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="back" translatable="false">Back</string>
    <string name="select_your_event" translatable="false">Select Your Event</string>
    <string name="select_language" translatable="false">Language</string>
    <string name="continue_" translatable="false">Continue</string>
    <string name="register_title" translatable="false">Register</string>
    <string name="name" translatable="false">Name</string>
    <string name="forn_hint" translatable="false"><font size="12">Type here</font></string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="company_name" translatable="false">Company Name</string>
    <string name="job_title" translatable="false">Job Title</string>
    <string name="register" translatable="false">Register</string>
    <string name="login" translatable="false"> Login</string>
    <string name="already_have_an_account" translatable="false">Already  have an account? </string>
    <string name="agree_with" translatable="false">agree with </string>
    <string name="terms_amp_amp_conditions" translatable="false"> <u>Terms &amp; Conditions</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="log_in" translatable="false">LOG IN</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="enter_email" translatable="false">Enter Email</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="enter_otp" translatable="false">Enter Otp</string>
    <string name="verify" translatable="false">Verify</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="home" translatable="false"> Home</string>
    <string name="exhibitions" translatable="false">Exhibitions</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="speakers" translatable="false">Speakers</string>
    <string name="companies" translatable="false">Companies</string>
    <string name="dashBoardJobs" translatable="false">Jobs</string>
    <string name="courses" translatable="false">Courses</string>
    <string name="goodie_bag" translatable="false">Goodie Bag</string>
    <string name="exit_survey" translatable="false">Exit Survey</string>
    <string name="upload_cv" translatable="false">Upload CV</string>
    <string name="choose_file" translatable="false">Choose File</string>
    <string name="cv_instructions" translatable="false">Only upload .doc,.docx and .pdf format.</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="select" translatable="false">Select</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="webinar" translatable="false">Webinar</string>
    <string name="type" translatable="false">Type:</string>
    <string name="speakers_webinar" translatable="false">Speakers Webinar</string>
    <string name="conference_agenda" translatable="false">Conference Agenda</string>
    <string name="stage_conference_agenda" translatable="false">Stage Conference Agenda</string>
    <string name="view_speaker_profile" translatable="false">View Speaker Profile</string>
    <string name="view_detail" translatable="false">View Webinar Detail</string>
    <string name="webinar_title_speaker_name" translatable="false">Webinar title,Speaker name</string>
    <string name="start_time" translatable="false">Start Time</string>
    <string name="start_date" translatable="false">Start Date</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="no_internet" translatable="false">No Internet</string>
    <string name="please_check_your_internet_connection" translatable="false">Please check your internet connection</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="salary" translatable="false">Salary : </string>
    <string name="location" translatable="false">Location :</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="need_help_description" translatable="false">For any concerns or questions, you may have so that someone from the team can assist For any concerns or questions, you may have so that someone from the team can assis you!</string>
    <string name="go_to_our_website" translatable="false">Go to our Website</string>
    <string name="notiifcaitons" translatable="false">Notifications</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="recruiter" translatable="false">Recruiter</string>
    <string name="request_interview" translatable="false">Request Interview</string>
    <string name="view_goodie" translatable="false">View Goodie</string>
    <string name="q" translatable="false">Q:</string>
    <string name="upload_resume" translatable="false">Upload Resume</string>
    <string name="download_resume" translatable="false">Download Resume</string>
    <string name="view_resume" translatable="false">View Resume</string>
    <string name="uploadtask" translatable="false">UploadTask</string>
    <string name="upload_document" translatable="false">Upload Document</string>
    <string name="view_document" translatable="false">View Document</string>
    <string name="download_document" translatable="false">Download Document</string>
    <string name="schedules" translatable="false">Schedules</string>
    <string name="status" translatable="false">Status</string>
    <string name="company" translatable="false">Company :</string>
    <string name="invited_by" translatable="false">Invited By :</string>
    <string name="status_" translatable="false">Status :</string>
    <string name="slot" translatable="false">Slot :</string>
    <string name="start_interview" translatable="false">Start Interview</string>
    <string name="cacnel" translatable="false">Cacnel</string>
    <string name="course_interest" translatable="false">Course Interest</string>
    <string name="search_by_course_title" translatable="false">Search by course title</string>
    <string name="search_by_course_location" translatable="false">Search by course location</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="are_you_sure_you_want_to_logout" translatable="false">Are you sure you want to logout?</string>
    <string name="update" translatable="false">Update</string>
    <string name="need_help" translatable="false">NEED HELP</string>
    <string name="please_reach_out_to" translatable="false">Please reach out to</string>
    <string name="media" translatable="false">Media</string>
    <string name="end_date">End Date</string>
    <string name="chat">Chat</string>
    <string name="matching_slots" translatable="false">Matching Slots</string>
    <string name="login_email">junaid@virtualrecruitmentdays.com</string>
    <string name="login_pass">Junaid@123</string>
    <string name="facebook_app_id" translatable="false">774398580525143</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb774398580525143</string>
    <string name="facebook_client_token" translatable="false">aa8eda5edd0bfa1f88927df5f00e7c79</string>
    <!--    <string name="facebook_client_token" translatable="false">c15149532f712718d57f263fc359f55d</string>-->
    <string name="networking_table" translatable="false">Networking Table</string>
    <string name="update_downloaded">Updated Successfully</string>
    <string name="restart">Restart</string>
    <string name="speakers_agenda">Speakers Agenda</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>