<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ffffff">


    <androidx.cardview.widget.CardView

        xmlns:card_view="http://schemas.android.com/tools"
        android:id="@+id/cardViewParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@android:color/transparent"
        android:innerRadius="@dimen/_18sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        card_view:cardCornerRadius="@dimen/_12sdp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parentLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logOutIcon"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/ic_logout"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Logout?"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/logoutTxt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:autoLink="web"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:textAlignment="center"
                android:textColor="#998fa2"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextView">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:layout_weight="1"
                    android:height="34dp"
                    android:background="@drawable/rounded_cornor_btn_app_color"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/cacnel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <Button
                    android:id="@+id/logoutBtn"
                    android:layout_width="@dimen/_120sdp"

                    android:layout_height="@dimen/_32sdp"

                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:height="34dp"
                    android:background="@drawable/rounded_cornor_btn_app_color"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
</FrameLayout>