<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".home.dashboard.resume.Resume">

    <WebView
        android:id="@+id/webView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pdfLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#182641"
        android:elevation="@dimen/_40sdp"
        android:visibility="gone">


        <!--        <com.github.barteksc.pdfviewer.PDFView-->
        android:id="@+id/idPDFView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#182641">


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_80sdp"
            android:theme="@style/RedAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/back_arrow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="Creer Test"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="65dp"
            android:layout_height="@dimen/_66sdp"
            android:background="@drawable/resume"
            app:layout_constraintBottom_toBottomOf="@+id/Icon"
            app:layout_constraintLeft_toLeftOf="@+id/Icon"
            app:layout_constraintRight_toRightOf="@+id/Icon"
            app:layout_constraintTop_toTopOf="@+id/Icon" />

        <ImageView
            android:id="@+id/Icon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/icon_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/fileDescriptionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/cv_instructions"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Icon" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:background="@drawable/rounded_cornor_btn_app_color"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/upload_resume"
            android:textAllCaps="false"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fileDescriptionTxt" />


        <Button
            android:id="@+id/viewBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:background="@drawable/rounded_cornor_btn_app_color"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/view_resume"
            android:textAllCaps="false"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadBtn" />


        <Button
            android:id="@+id/downloadBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:background="@drawable/rounded_cornor_btn_app_color"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/download_resume"
            android:textAllCaps="false"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>