<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:clickable="true"
    android:focusable="true"
    tools:context=".registration.ForgetPassword">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RedAccent"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:background="@drawable/back_arrow"
                android:padding="@dimen/_12sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="Forget Password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/forgetIcon"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:src="@drawable/forget"
            app:layout_constraintBottom_toTopOf="@id/emailLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/enter_email"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/forn_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_200"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:background="@drawable/rounded_cornor_btn_app_color"
            android:fontFamily="@font/montserrat_semi_bold"

            android:text="@string/continue_"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>